libtaskmanager: add workaround for QTBUG-71922

Qt Quick Drag will unconditionally convert a QByteArray to QString, so
some bytes may be lost during the conversion. This adds a workaround to
handle string type mime data, so after porting the task manager applet
away from the custom drag handler, drag a window to the pager applet can
still work.

See also: https://bugreports.qt.io/browse/QTBUG-71922

CCBUG: 402376